# LCMGoCloudRAG

./: .env.example  .gitignore  CLAUDE.md  LCM_GoCloud_Enterprise_RAG_Platform_Architecture.docx  pyproject.toml
.claude/: README.md  settings.local.json
.claude/agents/: devops.md  frontend-engineer.md  python-backend.md  rag-specialist.md  security-reviewer.md  terraform-infra.md
.claude/hooks/: check-secrets.sh  lint-python.sh  run-tests.sh  type-check.sh  validate-terraform.sh
.claude/rules/: frontend.md  python.md  rag-pipeline.md  security.md  terraform.md
.github/workflows/: cd.yml  ci.yml
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: audit.py  auth.py  cache.py  celery_app.py  clients.py  config.py  database.py  exceptions.py  guardrails.py  logging_config.py  main.py  metrics.py
backend/workers/: celery_app.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  docker-compose.dev.yml  docker-compose.prod.yml
docker/keycloak/: realm-export.json
docker/prometheus/: prometheus.yml
docs/: FIRST_PROMPT.md  api-spec.md  architecture.md  evaluation.md  rag-pipeline.md  security.md
docs/plans/: 2026-02-23-phase1-bootstrap-design.md  2026-02-23-phase1-bootstrap-plan.md  2026-02-23-phase2-production-backend-design.md  2026-02-23-phase2-production-backend-plan.md  2026-02-23-phase3-rag-quality-design.md  (+7 more)
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
scripts/: reindex_hybrid.py  setup-dev.sh  setup-mcp-servers.sh
tests/: conftest.py
(+138 files in other folders)
