[project]
name = "docintel"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"backend/app/api/v1/documents.py" = ["B008"]
"backend/app/api/v1/query.py" = ["B008"]
"backend/app/auth.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app", "workers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
